--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.564.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.13.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
